// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ReferenceSelector /> > should render 1`] = `
<styled.div>
  <label>
    Source Reference
  </label>
  <Styled(BoxGroup)>
    <ReferenceSelectorItem
      active={false}
      key="foo"
      onClick={[Function]}
      reference={
        {
          "id": "foo",
          "key": "bar",
        }
      }
    />
  </Styled(BoxGroup)>
  <InputError />
</styled.div>
`;

exports[`<ReferenceSelector /> > should render NoneFound when [references.length=0] 1`] = `
<styled.div>
  <label>
    Source Reference
  </label>
  <Styled(BoxGroup)>
    <NoneFoundSection
      noun="source references"
    />
  </Styled(BoxGroup)>
  <InputError />
</styled.div>
`;
